# OpenCV

./: .gitignore  CMakeLists.txt  README.md  detection_image_test.py  detection_test.py  face-boxer.py  io_camera.py  io_camera_1.py  io_image.py
CPP/: CPP.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
CPP/BaseCv/: BaseCv.pro  CMakeLists.txt  colordetecor.cpp  colordetecor.h  colordetectir.h  colorhistogram.cpp  histogram1d.cpp  histogram1d.h  laplacianzc.cpp  laplacianzc.h  linesfinder.cpp  linesfinder.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  morphofeatures.cpp  morphofeatures.h
Python/: io_image.py
Python/cameo/: cameo.py  filters.py  trackers.py  utils.py
Python/face_detect_camera/: detect.py
build-CPP-Desktop_Qt_5_8_0_GCC_64bit-Debug/: CPP  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
cameo/: cameo.py  filters.py  managers.py  rects.py
face_detect_camera/: managers.py  trackers.py
